--- a/src/app/components/eventoEditar/eventoEditar.component.html
+++ b/src/app/components/eventoEditar/eventoEditar.component.html
@@ -410,7 +410,7 @@
 
                                 <div class="input-group form-row mb-3">
                                     <div class="col-md-12 text-center">
-                                        <button class="btn btn-success" type="submit">Guardar cambios</button>
+                                        <button class="btn btn-success" type="submit" [disabled]="formImgE.invalid">Guardar cambios</button>
                                     </div>
                                 </div>
 
