mas mas ajustes

--- a/src/app/components/boleto-editar/boleto-editar.component.html
+++ b/src/app/components/boleto-editar/boleto-editar.component.html
@@ -115,25 +115,19 @@
                                         <label for="nombreBoleto">Nombre:</label>
                                         <input type="text" class="form-control mb-3" id="nombreBoleto" placeholder="Ingrese el Nombre del Boleto" formControlName="nombre">
                                     </div>
-                                    <div class="col-md-6">
-                                        <label for="descEvento">Descripción:</label>
-                                        <textarea id="descEvento" class="form-control" rows="5" formControlName="desc"></textarea>
-                                    </div>
-                                </div>
-                                <div class="form-row mb-3">
                                     <div class="col-md-3">
                                         <label for="inventarioBol">Inventario:</label>
                                         <input type="number" class="form-control" id="inventarioBol" min="0" step="1" formControlName="inventario">
                                     </div>
                                     <div class="col-md-3">
-                                        <label for="precio">Precio por Boleto:</label>
-                                        <input type="number" min="0" step="1" value="0" id="precio" class="form-control" formControlName="precio">
+                                        <label for="preciob">Precio por Boleto:</label>
+                                        <input type="number" min="0" step="1" value="0" id="preciob" class="form-control" formControlName="precio">
                                     </div>
                                 </div>
                                 <div class="form-row mb-3">
-                                    <div class="col-md-6 d-block mx-auto text-center">
-                                        <label for="stock">Agregar o Quitar Stock de Boletos:</label>
-                                        <input #stock type="number" step="1" class="form-control text-center" value="0" id="stock" formControlName="stock">
+                                    <div class="col-md-6">
+                                        <label for="descEvento">Descripción:</label>
+                                        <textarea id="descEvento" class="form-control" rows="5" formControlName="desc"></textarea>
                                     </div>
                                 </div>
                                 <div class="input-group form-row mb-3">
@@ -142,6 +136,15 @@
                                     </div>
                                 </div>
                             </form>
+                            <div class="row">
+                                <div class="col-md-6 d-block mx-auto text-center">
+                                    <label for="stock">Agregar o Quitar Stock de Boletos:</label>
+                                    <input #stock type="number" step="1" class="form-control text-center" value="0" id="stock">
+                                </div>
+                                <div class="col-md-12 text-center">
+                                    <button class="btn btn-success" type="button">Cambiar Stock de Evento</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -252,7 +255,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Promoción por Código</h5>
-                <button #cerrar type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button #cerrarCodigo type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
             </div>
