--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -17,7 +17,7 @@
 
             <div class="sidebar">
                 <div class="user-panel mt-3 pb-3 mb-3 text-center">
-                    <a [routerLink]="['perfil']">{{usuario.nombre}}</a>
+                    <!-- <a [routerLink]="['perfil']">{{usuario.nombre}}</a> -->
                 </div>
 
                 <nav class="mt-2">
