--- a/src/app/components/eventoEditar/eventoEditar.component.html
+++ b/src/app/components/eventoEditar/eventoEditar.component.html
@@ -356,9 +356,9 @@
                                         <label for="imgPrincipal">Imagen Principal del Evento:</label><br>
                                         <input #imgInputP type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
                                         <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
-                                        <div class="row border" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
+                                        <div class="row mt-3" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
                                             <div class="col-md-12">
-                                                <img [src]="urlPrincipal" height="300" width="400">
+                                                <img [src]="urlPrincipal" height="200" style="max-width: 300px; max-height: 150;">
                                                 <button type="button" aria-label="Close" class="btn btn-danger" (click)="borrarImgPrincipal()">
                                                 <span aria-hidden="true">&times;</span>
                                               </button>
@@ -367,23 +367,26 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="imgEvento">Imagenes del Evento:</label><br>
-                                        <input #imgsInput type='file' id="imgEvento" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsEvento">
-                                        <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
-                                        <ng-container *ngIf="(urls != null) && (!validacionTamImgs)">
-                                            <div class="row border" *ngFor='let url of urls; let i = index'>
-                                                <div class="col-md-12">
-                                                    <img [src]="url " height="300" width="400">
-                                                    <button type="button" aria-label="Close" class="btn btn-danger" (click)="borrarImgs(url, i)">
-                                                      <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
+                                        <label for="imgsEvento">Imagenes del Evento: <small class="text-danger">*</small></label>
+                                        <input #imgsInput type='file' id="imgsEvento" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsEvento">
+                                        <div class="row mb-3 mt-3" *ngFor='let url of urls; let i = index'>
+                                            <div class="col-md-9">
+                                                <h6 class="text-center">{{ listaImg[i] }}</h6>
+                                                <img [src]="url" height="200" class="float-right" style="max-width: 300px; max-height: 150;"><br>
                                             </div>
-                                        </ng-container>
+                                            <div class="col-md-3">
+                                                <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(url, i)">
+                                                  <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="row mb-3 mt-3" *ngFor='let url of badUrls; let i = index'>
+                                            <small *ngIf="errorTamImgs && sinImagen == false" class="form-text text-danger ml-4">La imagen {{ badUrls[i] }} no puede ser ingresada. Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
+                                        </div>
                                         <div class="mt-4 text-center">
                                             <h5>Imágenes Actuales.</h5>
                                         </div>
-                                        <div class="row mt-3 border" *ngFor='let img of imgs'>
+                                        <div class="row mt-3" *ngFor='let img of imgs'>
                                             <div class="col-md-12 text-center">
                                                 <img [src]="'assets/img/eventos/'+img.ruta_imagen_eve " height="300" width="400"><br>
                                                 <button type="button" class="btn btn-danger" (click)="eliminarImg( img.id_imagen_eve )">Eliminar</button>
@@ -397,9 +400,9 @@
                                         <label for="imgCarousel">Imagen de Carousel:</label><br>
                                         <input #imgInputC type="file" id="imgCarousel" accept=".jpg" (change)="imgCarousel($event)" formControlName="imgCarousel">
                                         <small *ngIf="validacionTamImgCarousel" class="form-text text-danger">Error: Tamaño mínimo 1250x690. Tamaño Máximo: 4096x2160</small>
-                                        <div class="row" *ngIf="(urlCarousel != null) && (!validacionTamImgCarousel)">
+                                        <div class="row mt-3" *ngIf="(urlCarousel != null) && (!validacionTamImgCarousel)">
                                             <div class="col-md-12">
-                                                <img [src]="urlCarousel" height="300" width="400">
+                                                <img [src]="urlCarousel" height="200" style="max-width: 300px; max-height: 150;">
                                                 <button type="button" aria-label="Close" class="btn btn-danger" (click)="borrarImgCarousel()">
                                                   <span aria-hidden="true">&times;</span>
                                                 </button>
