--- a/src/app/components/publicaciones/publicaciones.component.html
+++ b/src/app/components/publicaciones/publicaciones.component.html
@@ -111,9 +111,9 @@
                             <input #imgInputP [writeFile]="true" type="file" id="principal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
                             <small *ngIf="validacionImgPrincipal" class="form-text text-danger">Imagen Principal Obligatoria.</small>
                             <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
-                            <div class="row" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
+                            <div class="row mt-3" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
                                 <div class="col-md-9">
-                                    <img [src]="urlPrincipal" height="200" class="float-right"><br>
+                                    <img [src]="urlPrincipal" height="200" class="float-right" style="max-width: 300px; max-height: 150;"><br>
                                 </div>
                                 <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgPrincipal()">
@@ -126,19 +126,22 @@
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
-                            <label for="imgsPublicacion">Imagenes de la Publicación: <small class="text-danger">*</small></label>
-                            <input #imgsInput [writeFile]="true" type='file' id="imgsPublicacion" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsPublicacion">
+                            <label for="imgsPub">Imagenes de la Publicación: <small class="text-danger">*</small></label>
+                            <input #imgsInput type='file' id="imgsPub" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsPublicacion">
                             <small *ngIf="validacionImgs" class="form-text text-danger">Mínimo una imágen.</small>
-                            <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
-                            <div class="row" *ngFor='let url of urls; let i = index'>
+                            <div class="row mb-3 mt-3" *ngFor='let url of urls; let i = index'>
                                 <div class="col-md-9">
-                                    <img [src]="url " height="200 " class="float-right"><br>
+                                    <h6 class="text-center">{{ listaImg[i] }}</h6>
+                                    <img [src]="url" height="200" class="float-right" style="max-width: 300px; max-height: 150;"><br>
                                 </div>
                                 <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(url, i)">
-                                          <span aria-hidden="true">&times;</span>
-                                        </button>
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
                                 </div>
+                            </div>
+                            <div class="row mb-3 mt-3" *ngFor='let url of badUrls; let i = index'>
+                                <small *ngIf="errorTamImgs && sinImagen == false" class="form-text text-danger ml-4">La imagen {{ badUrls[i] }} no puede ser ingresada. Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
                             </div>
                         </div>
                     </div>
@@ -154,3 +157,7 @@
         </div>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
