--- a/src/app/components/estadisticas-evento/estadisticas-evento.component.html
+++ b/src/app/components/estadisticas-evento/estadisticas-evento.component.html
@@ -1,1 +1,45 @@
-<p>estadisticas-evento works!</p>
+<ul class="nav nav-tabs justify-content-center">
+    <li class="nav-item">
+      <a (click)="mostrarEdades()" class="nav-link"  [ngClass]="{
+        'active':tabActive === 1
+      }" >Estadísticas de edades</a>
+    </li>
+    <li class="nav-item" >
+        <a (click)="mostrarDias()" class="nav-link active" [ngClass]="{
+            'active':tabActive === 2
+          }" >Estadísticas de ventas por semana</a> 
+    </li>
+</ul>
+
+<div *ngIf="tabActive==1">
+    <table class="table table-striped table-bordered table-hover">
+        <thead class="thead-dark text-center">
+            <tr>
+                <th scope="col" style="width: 50%;">Edad</th>
+                <th scope="col" style="width: 50%;">Cantidad</th>
+            </tr>
+        </thead>
+        <tbody class="text-center">
+            <tr *ngFor="let edad of edades">
+                <th scope="row" class="align-middle">{{ edad.edad }}</th>
+                <td class="align-middle">{{ edad.cantidad }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div *ngIf="tabActive==2">
+    <table class="table table-striped table-bordered table-hover">
+        <thead class="thead-dark text-center">
+            <tr>
+                <th scope="col" style="width: 50%;">Dia</th>
+                <th scope="col" style="width: 50%;">Cantidad</th>
+            </tr>
+        </thead>
+        <tbody class="text-center">
+            <tr *ngFor="let semana of semanas">
+                <th scope="row" class="align-middle">{{ semana.dia }}</th>
+                <td class="align-middle">{{ semana.cantidad }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
